--- a/Project/PrivicyAndPolicy.html
+++ b/Project/PrivicyAndPolicy.html
@@ -21,6 +21,7 @@
 
   <link rel="stylesheet" href="scrollbutton.css">
     <link rel="stylesheet" href="./pages//service1.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <button onclick="topFunction()" id="myBtn" title="Go to top">
@@ -133,7 +134,7 @@
             <div class="sec-header">
               <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                  <img src="./Images//image-logo.png" alt="" />
+                <a href="./index.html">  <img src="./Images//image-logo.png" alt="" /></a>
                   <button
                     class="navbar-toggler"
                     type="button"
@@ -161,9 +162,11 @@
                         <a class="nav-link text-light" href="./ContactUs.html">Contact Us</a>
                       </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                      <button class="nav-btn"><a style="background-color:#00AEEF !important;color: #FFFFFF; text-decoration: none !important;" href="./ContactUs.html">Enquire Now</a></button>
-                    </form>
+                    <div class="form-inline my-2 my-lg-0">
+                      <a style="background-color:#00AEEF !important;color: #FFFFFF; text-decoration: none !important;" href="#touch_with_us"> 
+                        <button class="nav-btn">Enquire Now</button>
+                        </a>
+                    </div>
                   </div>
                 </nav>
               </div>
@@ -215,7 +218,7 @@ Development-cart receives the personal information of users when they explore ou
 
 
 
-    <section class="get-in-touch">
+    <section class="get-in-touch" id="touch_with_us">
       <div class="container">
         <h4>Get in Touch</h4>
         <div class="get-in-touch-info">
@@ -258,12 +261,12 @@ Development-cart receives the personal information of users when they explore ou
               <img class="img-fluid" src="./Images/get-in-touch-img.png" alt="">
             </div>
             <div class="col-md-6">
-              <form action="">
+              <div>
                 <div class="right-inputes">
-                  <input type="text" placeholder="Your Name" class="form-control">
-                  <input type="text" placeholder="Your Email" class="form-control">
-                  <input type="text" placeholder="Your Phone Number" class="form-control">
-                  <textarea name="textarea" id="textarea" class="form-control large-input" maxlength="100" rows="5" style="width: 100%" placeholder="Enter Text Here..."></textarea>
+                  <input id="inp1" type="text" placeholder="Your Name" class="form-control">
+                  <input id="inp2" type="text" placeholder="Your Email" class="form-control">
+                  <input id="inp3" type="text" placeholder="Your Phone Number" class="form-control">
+                  <textarea  name="textarea" id="textarea" class="form-control large-input" maxlength="100" rows="5" style="width: 100%" placeholder="Enter Text Here..."></textarea>
                   <div id="count" class="count-textarea">
                       <span id="current_count">0</span>
                       <span id="maximum_count">/ 100</span>
@@ -272,10 +275,10 @@ Development-cart receives the personal information of users when they explore ou
                  </div> 
                  
                   <div class="btn-div">
-                    <button type="submit" class="btn btn-primary form_btn">Submit</button>
+                    <button  onclick="sendEmail()" class="btn btn-primary form_btn">Submit</button>
                   </div>
                 
-                </form>
+                </div>
 
             </div>
           </div>
@@ -369,5 +372,6 @@ Development-cart receives the personal information of users when they explore ou
     crossorigin="anonymous"
   ></script>
 <script src="./scoll.js"></script>
+<script src="./sendEmail.js"></script>
 </body>
 </html>
