--- a/Project/Refund_policy.html
+++ b/Project/Refund_policy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refund policy</title>
+    <link rel="icon" href="./Images/title-logo.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,6 +21,7 @@
 
     <link rel="stylesheet" href="scrollbutton.css">
     <link rel="stylesheet" href="./pages//service1.css" />
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -133,7 +135,7 @@
             <div class="sec-header">
               <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                  <img src="./Images/image-logo.png" alt="" />
+                  <a href="./index.html"><img src="./Images/image-logo.png" alt="" /></a>
                   <button
                     class="navbar-toggler"
                     type="button"
@@ -161,9 +163,11 @@
                         <a class="nav-link text-light" href="./ContactUs.html">Contact Us</a>
                       </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                      <button class="nav-btn"><a style="background-color:#00AEEF !important;color: #FFFFFF; text-decoration: none !important;" href="./ContactUs.html">Enquire Now</a></button>
-                    </form>
+                    <div class="form-inline my-2 my-lg-0">
+                      <a style="background-color:#00AEEF !important;color: #FFFFFF; text-decoration: none !important;" href="#touch_with_us"> 
+                        <button class="nav-btn">Enquire Now</button>
+                        </a>
+                    </div>
                   </div>
                 </nav>
               </div>
@@ -218,7 +222,7 @@ Please note that this policy is subject to change at any time, and we will notif
 
 
 
-    <section class="get-in-touch">
+    <section class="get-in-touch" id="touch_with_us">
       <div class="container">
         <h4>Get in Touch</h4>
         <div class="get-in-touch-info">
@@ -261,12 +265,12 @@ Please note that this policy is subject to change at any time, and we will notif
               <img class="img-fluid" src="./Images//get-in-touch-img.png" alt="">
             </div>
             <div class="col-md-6">
-              <form action="">
+              <div>
                 <div class="right-inputes">
-                  <input type="text" placeholder="Your Name" class="form-control">
-                  <input type="text" placeholder="Your Email" class="form-control">
-                  <input type="text" placeholder="Your Phone Number" class="form-control">
-                  <textarea name="textarea" id="textarea" class="form-control large-input" maxlength="100" rows="5" style="width: 100%" placeholder="Enter Text Here..."></textarea>
+                  <input id="inp1" type="text" placeholder="Your Name" class="form-control">
+                  <input id="inp2" type="text" placeholder="Your Email" class="form-control">
+                  <input id="inp3" type="text" placeholder="Your Phone Number" class="form-control">
+                  <textarea  name="textarea" id="textarea" class="form-control large-input" maxlength="100" rows="5" style="width: 100%" placeholder="Enter Text Here..."></textarea>
                   <div id="count" class="count-textarea">
                       <span id="current_count">0</span>
                       <span id="maximum_count">/ 100</span>
@@ -275,10 +279,10 @@ Please note that this policy is subject to change at any time, and we will notif
                  </div> 
                  
                   <div class="btn-div">
-                    <button type="submit" class="btn btn-primary form_btn">Submit</button>
+                    <button  onclick="sendEmail()" class="btn btn-primary form_btn">Submit</button>
                   </div>
                 
-                </form>
+                </div>
             </div>
           </div>
         </div>
@@ -372,5 +376,6 @@ Please note that this policy is subject to change at any time, and we will notif
     crossorigin="anonymous"
   ></script>
 <script src="./scoll.js"></script>
+<script src="./sendEmail.js"></script>
 </body>
 </html>
